--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "sinatra-heroku-cedar-template",
-  "description": "Sinatra Heroku Cedar Template - The bare minimum for a sinatra app on cedar, running thin, and using bundler.",
+  "name": "cn-trello",
+  "description": "CodeNewbie Trello App",
   "keywords": [
     "sinatra",
     "heroku",
@@ -9,5 +9,4 @@
   ],
   "website": "https://github.com/scottmotte/sinatra-heroku-cedar-template",
   "repository": "https://github.com/scottmotte/sinatra-heroku-cedar-template",
-  "logo": "https://raw.githubusercontent.com/scottmotte/sinatra-heroku-cedar-template/master/sinatra-heroku-cedar-template.jpg"
 }
