--- a/app.json
+++ b/app.json
@@ -7,6 +7,6 @@
     "cedar",
     "template"
   ],
-  "website": "https://github.com/scottmotte/sinatra-heroku-cedar-template",
-  "repository": "https://github.com/scottmotte/sinatra-heroku-cedar-template",
+  "website": "",
+  "repository": "https://github.com/ajose01/cn-trello",
 }
